--- a/LoggingFramework/LoggingFramework.vcxproj
+++ b/LoggingFramework/LoggingFramework.vcxproj
@@ -138,35 +138,35 @@
     <OutDir>$(SolutionDir)out\dll</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">
-    <OutDir>$(SolutionDir)out\debug\dll\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\debug\dll\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release DLL|Win32'">
-    <OutDir>$(SolutionDir)out\dll\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\dll\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug DLL|x64'">
-    <OutDir>$(SolutionDir)out\debug\dll\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\debug\dll_x64\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release DLL|x64'">
-    <OutDir>$(SolutionDir)out\dll\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\dll_x64\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug LIB|x64'">
-    <OutDir>$(SolutionDir)out\debug\lib\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\debug\lib_x64\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release LIB|x64'">
-    <OutDir>$(SolutionDir)out\lib\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\lib_x64\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug LIB|Win32'">
-    <OutDir>$(SolutionDir)out\debug\lib\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\debug\lib\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release LIB|Win32'">
-    <OutDir>$(SolutionDir)out\lib\$(Platform)</OutDir>
+    <OutDir>$(SolutionDir)out\lib\</OutDir>
     <IntDir>$(ProjectDir)intermediate\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug DLL|Win32'">
@@ -276,7 +276,6 @@
   <ItemGroup>
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="logger_colour.cpp" />
-    <ClCompile Include="logger_output.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logger.h" />
