added unit tests

--- a/LibraryConsoleColourFramework/LibraryConsoleColourFramework.vcxproj
+++ b/LibraryConsoleColourFramework/LibraryConsoleColourFramework.vcxproj
@@ -169,6 +169,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -184,6 +185,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -199,6 +201,8 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -214,6 +218,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -231,6 +236,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -250,6 +256,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -269,6 +276,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -288,6 +296,7 @@ xcopy /y "$(ProjectDir)*.h" "$(SolutionDir)out\$(ProjectName)\include"</Command>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <ObjectFileName>$(OutDir)$(TargetName).obj</ObjectFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
